# SuperMetroidDread

./: CMakeLists.txt  SuperMetroidDreadConfig.h.in  collision dread.tsx  process_tmj.py
assets/: engine  font.fnt
assets/maps/: artaria.area  artaria.world  artaria_00.map  artaria_00.tmj  artaria_01.map  artaria_01.tmj  artaria_02.map  artaria_02.tmj  artaria_03.map  artaria_03.tmj  artaria_04.map  artaria_04.tmj  artaria_05.map  artaria_05.tmj  artaria_06.map  artaria_06.tmj  artaria_07.map  artaria_07.tmj  artaria_08.map  artaria_08.tmj  artaria_09.map  artaria_09.tmj  artaria_10.map  artaria_10.tmj  artaria_11.map  artaria_11.tmj  artaria_12.map  artaria_12.tmj  artaria_13.map  artaria_13.tmj  artaria_14.map  artaria_14.tmj  artaria_15.map  artaria_15.tmj  artaria_16.map  artaria_16.tmj  artaria_17.map  artaria_17.tmj  artaria_18.map  artaria_18.tmj  (+120 more)
assets/stgOld/: BattlefieldNS.stg  temple.stg  testMap.stg
assets/textures/: beams.xcf  effects.xcf  objects.xcf
src/: Anm.h  AnmEffects.cpp  AnmEffects.h  AnmGui.cpp  AnmGui.h  AnmManagerOld  AnmObjects.cpp  AnmObjects.h  AnmPlayer.cpp  AnmPlayer.h  Area.cpp  Area.h  BreakableBlock.cpp  BreakableBlock.h  Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  CollisionMap.cpp  CollisionMap.h  Controller.cpp  Controller.h  DamageSource.cpp  DamageSource.hpp  Door.cpp  Door.h  Game.cpp  Game.h  Layers.h  PlayerRenderer.cpp  PlayerRenderer.h  Room.cpp  Room.h  Samus.cpp  Samus.h  Tilemap.cpp  Tilemap.h  main.cpp
src/Text/: SpriteFont.cpp  SpriteFont.hpp
